# A.D.I

./: .gitignore  CHANGELOG.md  CODEOWNERS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
app/: main.py
app/api/: pdf.py  routes.py
app/core/: config.py  milvus_manager.py  ollama_manager.py  selenium_driver.py
app/db/: milvus.py
app/utils/: html_processing.py  pdf_processing.py
